Add all current files before GitHub review and updates

--- a/firebase.json
+++ b/firebase.json
@@ -15,8 +15,10 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
+        "cd functions && npm install",
+        "cd functions && npm run lint"
+      ],
+      "runtime": "nodejs20"
     }
   ],
   "hosting": {
@@ -33,15 +35,41 @@
       }
     ],
     "headers": [
+  {
+    "source": "**",
+    "headers": [
       {
-        "source": "**",
-        "headers": [
-          {
-            "key": "Content-Security-Policy",
-            "value": "default-src 'self'; frame-ancestors 'self'; script-src 'self' 'unsafe-inline' https://www.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com wss://*.firebaseio.com https://*.googleapis.com;"
+        "key": "Content-Security-Policy",
+        "value": "default-src 'self'; frame-src 'self' https://*.firebaseapp.com https://accounts.google.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com https://www.googletagmanager.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com wss://*.firebaseio.com https://*.googleapis.com https://www.google-analytics.com; object-src 'none';"
+      },
+      {
+        "key": "Cross-Origin-Opener-Policy",
+        "value": "same-origin"
+      },
+      {
+        "key": "Cross-Origin-Embedder-Policy",
+        "value": "unsafe-none"
+      },
+      {
+        "key": "X-Content-Type-Options",
+        "value": "nosniff"
+      },
+      {
+        "key": "X-Frame-Options",
+        "value": "DENY"
+      },
+      {
+        "key": "Referrer-Policy",
+        "value": "strict-origin-when-cross-origin"
+      },
+      {
+        "key": "Permissions-Policy",
+        "value": "geolocation=(), microphone=(), camera=()"
           }
         ]
       }
-    ]
+    ],
+    "trailingSlash": false,
+    "cleanUrls": true
   }
 }
