--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,8 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
+    "build": "",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -10,17 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "bsp": "file:..",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^4.9.0",
+    "firebase-functions-test": "^3.4.1"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0"
   },
   "private": true
 }
