--- a/functions/package.json
+++ b/functions/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "bsp": "file:..",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^4.9.0",
-    "firebase-functions-test": "^3.4.1"
+    "firebase-functions": "^5.1.0",
+    "firebase-functions-test": "^3.3.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint": "^9.12.0",
+    "mocha": "^10.7.3",
+    "chai": "^5.1.1"
   },
   "private": true
 }
