--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sanitize-html": "^2.16.0",
